kubernetes/dashboard.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubernetes-dashboard
  namespace: kube-system
  labels:
    k8s-app: kubernetes-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: kubernetes-dashboard
  template:
    metadata:
      labels:
        k8s-app: kubernetes-dashboard
    spec:
      serviceAccountName: dashboard-admin-sa
      containers:
      - name: kubernetes-dashboard
        image: kubernetesui/dashboard:v2.4.0
        ports:
        - containerPort: 8443
          protocol: TCP
        args:
          - --namespace=kube-system
          - --enable-skip-login
          - --disable-settings-authorizer

---
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-dashboard
  namespace: kube-system
  labels:
    k8s-app: kubernetes-dashboard
spec:
  type: LoadBalancer
  ports:
  - port: 443
    targetPort: 8443
  selector:
    k8s-app: kubernetes-dashboard
